# fmeme

./: fmeme.cabal  readme.md  stack.yaml
app/: example.lhs  fmeme-chart.hs  mnist.lhs
src/FMeme/: Funks.hs  Types.hs
